--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "7.7.0",
     "eslint-plugin-react-native": "^3.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "esprima": "^3.1.3",
